# pdf-to-md

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  install_cli.sh  pyproject.toml
.github/workflows/: ci.yml
legacy/: pdf_to_docx.sh  pdf_to_md.sh
pdf_to_md/: cli.py
scripts/: convert_pdf.py
wiki/: status.md
